<resources>
    <string name="app_name">Monument - Guide and Wallpapers</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="quit_msg">Quit the Game?</string>
    <string name="monument_valley_original">Original</string>
    <string name="monument_valley_forgotten_shores">Forgotten Shores</string>
    <string name="monument_valley_ida_dream">Ida\'s Dream</string>
    <string name="monument_valley">monument_valley</string>
    <string name="monument_valley2">monument_valley2</string>
    <string name="coming_soon">Coming Soon !</string>
    <string name="gmail">xchp2008@gmail.com</string>
</resources>
